--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gerar-boletos",
-  "version": "1.4.5",
+  "name": "@megres/gerar-boletos",
+  "version": "1.4.8",
   "description": "Gerar boletos para vários bancos",
   "main": "lib/index.js",
   "directories": {
@@ -44,6 +44,7 @@
     "node": ">=10.0.0"
   },
   "dependencies": {
+    "@megres/gerar-boletos": "^1.4.7",
     "base64-stream": "^1.0.0",
     "moment": "^2.24.0",
     "pdfkit": "0.10.0"
